objects/ApplicationImage__c.object
<CustomObject>
    <fields>
        <fullName>ChartType__c</fullName>
        <label>Chart Type</label>
        <picklist>
            <picklistValues>
                <fullName>pie</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>column</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gauge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>funnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>scatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>donut</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DasboardLegendLabel__c</fullName>
        <label>Dasboard Legend Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DasboardValueLabel__c</fullName>
        <label>Dasboard Value Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DashboardFromURL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dashboard From URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DashboardURL__c</fullName>
        <label>Dashboard URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FooterImageURL__c</fullName>
        <formula>IF(IsFooterImage__c , 
    IF(ISPICKVAL( PageType__c , &apos;Page 1&apos;), &apos;#dPage3&apos;,
       IF(ISPICKVAL( PageType__c , &apos;Page 2&apos;), &apos;#dPage4&apos;,
          IF(ISPICKVAL( PageType__c , &apos;Page 3&apos;), &apos;#dPage5&apos;,
             IF(ISPICKVAL( PageType__c , &apos;Page 4&apos;), &apos;#dPage6&apos;,
                IF(ISPICKVAL( PageType__c , &apos;Page 5&apos;), &apos;#dPage7&apos;,
                   IF(ISPICKVAL( PageType__c , &apos;Page 6&apos;), &apos;#dPage8&apos;, &apos;&apos;
                   )
                )
             )
          )
       )
    )
, &apos;&apos;)</formula>
        <label>Footer Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsDashboardImage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dashboard Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFooterImage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Footer Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LabelFontSize__c</fullName>
        <label>Label Font Size (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LabelLocationX__c</fullName>
        <label>Label Location X (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LabelLocationY__c</fullName>
        <label>Label Location Y (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationX__c</fullName>
        <defaultValue>0</defaultValue>
        <description>input location in px</description>
        <label>Location X (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationY__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Location in px</description>
        <label>Location Y (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PageType__c</fullName>
        <label>Page Type</label>
        <picklist>
            <picklistValues>
                <fullName>Login Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iPadApplication__c</fullName>
        <label>iPad Application</label>
        <referenceTo>iPadApplication__c</referenceTo>
        <relationshipLabel>ApplicationImages</relationshipLabel>
        <relationshipName>ApplicationImages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Application Image</label>
    <listViews>
        <fullName>All</fullName>
        <columns>iPadApplication__c</columns>
        <columns>NAME</columns>
        <columns>IsFooterImage__c</columns>
        <columns>PageType__c</columns>
        <columns>IsDashboardImage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Application Image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ApplicationImages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>